Fixed bug that initializes cards pack with null values and which causes null pointer exception when starting the game.